--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "firebase": "^9.15.0",
+    "ngx": "^2.4.0",
+    "ngx-toastr": "^16.0.1",
     "rxjs": "~7.5.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
+    "with": "^7.0.2",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
