--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
     "@angular/common": "^18.1.2",
     "@angular/compiler": "^18.1.2",
     "@angular/core": "^18.1.2",
-    "@angular/fire": "^7.5.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.1.2",
     "@angular/platform-browser": "^18.1.2",
     "@angular/platform-browser-dynamic": "^18.1.2",
     "@angular/router": "^18.1.2",
-    "firebase": "^9.15.0",
-    "ngx": "^2.4.0",
+    "firebase": "^10.12.4",
+    "glob": "^11.0.0",
     "ngx-toastr": "^16.0.1",
-    "rxjs": "~7.5.0",
+    "rxjs": "^7.8.0",
     "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "with": "^7.0.2",
-    "zone.js": "~0.14.8"
+    "zone.js": "^0.14.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.1.2",
-    "@angular/cli": "~18.1.2",
+    "@angular/cli": "^18.1.2",
     "@angular/compiler-cli": "^18.1.2",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
